tests/should_fail/let_destructure_list_on_bool.nv
module test
// let destructure: list pattern on Bool (not a list)
let [a, b] = true
